--- a/src/css/registry.css
+++ b/src/css/registry.css
@@ -1,7 +1,31 @@
 @charset "UTF-8";
+.topbar-register {
+  width: 818px;
+  margin: 0 auto;
+  padding: 30px 0 0;
+  position: relative;
+  z-index: 10;
+}
+
+.topbar-register {
+  padding: 22px 30px 45px;
+  height: 35px;
+  line-height: 35px;
+  color: #FFF;
+}
+
+.topbar-register h1 {
+  float: left;
+}
+
+.topbar-register a {
+  color: #FFF;
+  text-decoration: none;
+}
+
 form {
   width: 500px;
-  margin: 50px auto;
+  margin: 20px auto;
   padding: 20px;
 }
 
@@ -50,41 +74,6 @@ input {
   border: none;
 }
 
-.search {
-  background-color: #FFF;
-  padding-top: 24px;
-  height: 97px;
-}
-
-.search .search-warp {
-  width: 1190px;
-  height: 73px;
-  margin: 0 auto;
-}
-
-.search .search-warp .logo {
-  width: 190px;
-  height: 80px;
-  float: left;
-  margin-top: 8px;
-}
-
-.search .search-warp .logo h1 {
-  position: relative;
-}
-
-.search .search-warp .logo h1 .logo-bd {
-  color: #3C3C3C;
-  display: block;
-  margin-left: 22px;
-  padding-top: 58px;
-  width: 142px;
-  height: 0px;
-  overflow: hidden;
-  text-indent: -9999px;
-  background: url(../img/logo.png) no-repeat 0 0;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -98,7 +87,7 @@ body {
   height: 100%;
   color: #3C3C3C;
   background: #fff;
-  font: 12px/1.5 tahoma, arial, "Hiragino Sans GB", "宋体", sans-serif;
+  font: 12px/1.5 tahoma, arial, "Hiragino Sans GB", "瀹嬩綋", sans-serif;
 }
 
 body a {
@@ -109,62 +98,45 @@ footer {
   width: 1190px;
   height: 180px;
   margin: 0 auto;
-  margin-top: 250px;
+  margin-top: 100px;
   background-color: #fff;
 }
 
-footer p {
-  padding-bottom: 8px;
+.copyright {
+  padding: 0 0 30px 0;
+  text-align: center;
 }
-
-footer span {
-  margin: 0 4px;
-  color: #9c9c9c;
+.copyright .wrap {
+  width: 1190px;
+  margin: 0 auto;
 }
-
-footer span a:hover {
-  color: #ff5000;
-}
-
-footer .tb-footer {
-  padding-top: 7px;
-  border-top: 1px solid #ddd;
-}
-
-footer .tb-footer p {
-  margin-bottom: 8px;
-  line-height: 27px;
-  border-bottom: 1px solid #ddd;
-}
-
-footer b {
+.copyright .wrap a {
+  text-decoration: none;
+  color: #666;
   margin: 0 3px;
-  font-weight: 400;
-  color: #ddd;
 }
-
-footer .tb-footer a {
-  white-space: nowrap;
-  color: #6c6c6c;
-  text-decoration: none;
+.copyright .wrap ul {
+  width: 826px;
+  margin: 0 auto;
+  overflow: hidden;
 }
-
-footer .tb-footer-bd a {
-  white-space: nowrap;
-  color: #6c6c6c;
-  text-decoration: none;
+.copyright .wrap ul li {
+  float: left;
+  width: 70px;
+  text-align: center;
+  height: 12px;
+  line-height: 12px;
+  border-right: 1px solid #DDD;
+  text-align: center;
+  margin-right: -1px;
 }
-
-footer em {
-  color: #9c9c9c;
-  margin-left: 30px;
-  font-style: normal;
+.copyright .wrap .text {
+  padding: 24px 0 15px 0;
+  color: #999;
 }
-
-footer .tb-footer-mod {
-  display: inline-block;
-  vertical-align: middle;
-  background: url(../img/foot.jpg) no-repeat;
+.copyright .wrap .link a img {
+  width: 108px;
+  height: 40px;
 }
 
 /*# sourceMappingURL=registry.css.map */
